--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoTracker">
         <activity
-            android:name=".ProfileActivity"
+            android:name=".InsertCryptoAcitvity"
             android:exported="false" />
         <activity
             android:name=".CryptoSiteActivity"
